@@ -1,3 +1,8 @@
+2017-01-23  Bin Cheng  <bin.cheng@arm.com>
+
+	PR tree-optimization/70754
+	* gfortran.dg/pr70754.f90: New test.
+
 2017-01-23  Martin Liska  <mliska@suse.cz>
 
 	PR tree-optimization/79196
